update swagger base path
