# local/controller/system.go
@@ -33,7 +33,7 @@ func NewSystemController(routeGroups *common.RouteGroups) *SystemController {
 //	@Description	Return service control status
 //	@Tags			system
 //	@Success		200	{array}	string
-//	@Router			/v1/system/health [get]
+//	@Router			/system/health [get]
 func (ac *SystemController) getFirst(c *fiber.Ctx) error {
 	return c.SendString(configs.Version)
 }
